--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<h1>Sheldon Turtle</h1>
-  <h2><p>Turtle Heights, mi | 1-800-turtle | sheldonturtlerules@turtle.com</p></h2>
+<h1>Herbert the Turtle</h1>
+  <h2><p>Turtle Heights, MI | 1-800-turtle | sheldonturtlerules@turtle.com</p></h2>
   <h3>Skills</h3>
   <ol>
     <li>Living life in a shell (no hermit crab jokes allowed)</li>
