--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Herbert the Turtle</h1>
-  <h2><p>Turtle Heights, MI | 1-800-turtle | sheldonturtlerules@turtle.com</p></h2>
-  <h3>Skills</h3>
+  <p>Turtle Heights, MI | 1-800-turtle | sheldonturtlerules@turtle.com</p>
+  <h2>Skills</h2>
   <ol>
     <li>Living life in a shell (no hermit crab jokes allowed)</li>
     <li>Swimming in different environments</li>
